Moved index.html out

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="source/css/normalize.css">
+  <link rel="stylesheet" href="source/css/styles.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
       </header>
     </div>
   </section>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="source/main.js"></script>
 </body>
 
 </html>
